fix: update price display format in food menu. changed currency to kwacha

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <div>
                                 <h5>${item.name}</h5>
                                 <p>${item.description}</p>
-                                <span class="price-tag">$${item.price} OFF</span>
+                                <span class="price-tag">k${item.price} OFF</span>
                             </div>
                         </div>
                     `;
